=====================================

mlUnit 1.6.4 (in development)
-------------------------

  - Fix: license strings
  - Fix: stack trace filter for assert functions did not include newer
    assert wrappers
  - Fix: Failed on missing subclass argument.
  - Fix: gui_test_runner failed on a callback invocation with empty handles for
    MATLAB R2008b. Reported as [#15].
  - Fix: MATLAB shadow warning on assert function. Reported as [#17].
    Testcases must be migrated to use assert_true instead.
  - Removed install.m script. Content not needed, since assert can not get
    shadowed anymore.

    [#15] https://sourceforge.net/p/mlunit/bugs/15/
    [#17] https://sourceforge.net/p/mlunit/bugs/17/


mlUnit 1.6.3 (2012-07-13)
-------------------------

  - Provide assert_equals methods that equal NaN values. #2873.
  - Fix: Do not indent raw text in XML generation. #2874.


mlUnit 1.6.2 (2012-07-12)
-------------------------

  - Refactored XML generation.
  - Fix: XML head tag.


mlUnit 1.6.1 (2012-06-18)
-------------------------

  - Support for shallow and recursive path dependencies in Ant mlUnit task.
  - Support for executing additional MATLAB commands from Ant mlUnit task.
  - Fix: Empty relative directory yielded ugly dot.
  - Fix: Empty default shallow directory property.


mlUnit 1.6 (2012-06-13)
-----------------------

  - Added Ant build script. Lets other Ant scripts trigger recursive execution
    of all test scripts they like to execute.
  - Added assert_error.
  - Added generation of jUnit compatible XML output
  - Added recursive execution of all test script files in a specific folder and
    all its subfolders
  - Expanded mlUnit core test_case to return its function_name.


mlUnit 1.5.2 (2012-06-06)
-------------------------

  - Added assert_empty, assert_not_empty.
  - Fix: assert_equals, assert_not_equals failed when building strings from cell
    or structure arrays.
  - Simplified assert accessor functions. Made them consistent.
